new find prime number method, faster

--- a/data-science-machine-learning-main/notebooks/04_Evaluation_California_housing.ipynb
+++ b/data-science-machine-learning-main/notebooks/04_Evaluation_California_housing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "sklearn.utils._bunch.Bunch"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "dict_keys(['data', 'target', 'frame', 'target_names', 'feature_names', 'DESCR'])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
        "(20640, 8)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "(20640,)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
        "4    -122.25  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "Name: MedHouseVal, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
        "max     1243.333333     41.950000   -114.310000  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
        "Text(0.5, 1.0, 'Average # of bedrooms')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1156,17 +1156,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 3.86476005e+00,  2.84798934e+01,  5.42148255e+00,  1.09563003e+00,\n",
-       "        1.43187397e+03,  3.02623288e+00,  3.56403628e+01, -1.19575798e+02])"
+       "array([ 3.87717385e+00,  2.86079215e+01,  5.43840823e+00,  1.09813225e+00,\n",
+       "        1.43101738e+03,  3.08690124e+00,  3.56399243e+01, -1.19578117e+02])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1207,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1270,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1278,12 +1278,12 @@
      "output_type": "stream",
      "text": [
       "Ridge()\n",
-      "mean absolute error: 0.538\n",
-      "r2 score: 0.591\n",
+      "mean absolute error: 0.537\n",
+      "r2 score: 0.593\n",
       "\n",
       "DummyRegressor()\n",
-      "mean absolute error: 0.916\n",
-      "r2 score: -0.001\n",
+      "mean absolute error: 0.903\n",
+      "r2 score: -0.000\n",
       "\n"
      ]
     }
@@ -1321,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1333,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1343,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1351,16 +1351,22 @@
      "output_type": "stream",
      "text": [
       "Ridge()\n",
-      "mean absolute error: 0.5381, or 53809 dollars\n",
-      "r2 score: 0.591\n",
+      "training mean absolute error: 0.5289, or 52889 dollars\n",
+      "training r2 score: 0.609\n",
+      "testing mean absolute error: 0.5373, or 53729 dollars\n",
+      "testing r2 score: 0.593\n",
       "\n",
       "SGDRegressor()\n",
-      "mean absolute error: 3.6374, or 363743 dollars\n",
-      "r2 score: -5151.512\n",
+      "training mean absolute error: 0.6286, or 62857 dollars\n",
+      "training r2 score: -22.797\n",
+      "testing mean absolute error: 0.5933, or 59330 dollars\n",
+      "testing r2 score: -2.015\n",
       "\n",
       "LinearRegression()\n",
-      "mean absolute error: 0.5381, or 53809 dollars\n",
-      "r2 score: 0.591\n",
+      "training mean absolute error: 0.5289, or 52890 dollars\n",
+      "training r2 score: 0.609\n",
+      "testing mean absolute error: 0.5373, or 53728 dollars\n",
+      "testing r2 score: 0.593\n",
       "\n"
      ]
     }
@@ -1371,13 +1377,19 @@
     "# you can use the __class__ attribute to automatically get the name of the model you are using.\n",
     "\n",
     "for model in regs:\n",
-    "    model.fit(X_train_transf, y_train)\n",
+    "    model.fit(X_train_transf, y_train) # ok now model has learned/fitted. \n",
+    "\n",
+    "    mae_train= mean_absolute_error(y_train, model.predict(X_train_transf))\n",
+    "    r2_train= r2_score(y_train, model.predict(X_train_transf))\n",
+    "\n",
     "    y_predicted = model.predict(X_test_transf)\n",
     "    mae = mean_absolute_error(y_test, y_predicted)\n",
     "    r2 = r2_score(y_test, y_predicted)\n",
     "    print(f'{model}')\n",
-    "    print(f'mean absolute error: {mae:.4f}, or {int(mae*100000)} dollars')\n",
-    "    print(f'r2 score: {r2:.3f}')\n",
+    "    print(f'training mean absolute error: {mae_train:.4f}, or {int(mae_train*100000)} dollars')\n",
+    "    print(f'training r2 score: {r2_train:.3f}')\n",
+    "    print(f'testing mean absolute error: {mae:.4f}, or {int(mae*100000)} dollars')\n",
+    "    print(f'testing r2 score: {r2:.3f}')\n",
     "    print()\n",
     "\n"
    ]
@@ -1405,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1433,13 +1445,6 @@
     "\n",
     "Any issues? Are we happy with everything?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
